# python-devcontainer-gitpod

./: .gitpod.yml  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  random_wikipedia_article.py  requirements-dev.txt  requirements.txt  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-create.sh
.gitpod/: .gitpod.Dockerfile
